--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
